[package]
name = "hyper-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
buddy_system_allocator = "0.11.0"
spin = { version = "0.10.0", features = ["mutex"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.14.0"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
