[package]
name = "hyper-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
buddy_system_allocator = "0.11.0"
spin = { version = "0.9.8", features = ["mutex"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
# riscv = "0.14.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
tock-registers = "0.10.0"
bitflags = "2.9.1"
